<resources>
    <string name="app_name">Personal Diary</string>
    <string name="add_new_user">Add New User</string>
    <string name="delete_user">Delete User</string>
    <string name="user_selection">User Selection</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="insert_password">Insert Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="create_user">Create User</string>
    <string name="new_user_name">New User Name</string>
    <string name="new_user_password">New User Password</string>
    <string name="entry_name">Entry Name</string>
    <string name="create_drawing">Create Drawing</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="new_drawn_entry">New Drawn Entry</string>
    <string name="new_text_entry">New Text Entry with files</string>
    <string name="delete">Delete</string>
    <string name="new_image_entry">New Image Entry</string>
    <string name="invalid_title">Invalid Title</string>
    <string name="credits">Credits</string>
    <string name="confirmation_box">Confirmation</string>
    <string name="delete_confirmation_box_text">Do you really want to delete this Entry?</string>
    <string name="external_services_used">External Services Used :</string>
    <string name="year">Year :</string>
    <string name="course">Course :</string>
    <string name="subject">Subject :</string>
    <string name="author">Author :</string>
    <string name="sort_by_date_and_times">Sort by Date and Times</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="add_file">Add File</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="awating_gps_location">Awating GPS Location</string>
    <string name="error_getting_location">Error Getting Location</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="invalid_user">Invalid User</string>
    <string name="wait_for_finish">Wait for Location to be Found</string>
    <string name="share_with_user">Share With User</string>
    <string name="select_other_user">Select Other User</string>
    <string name="original_user">Original User</string>
    <string name="save_entry_first">Save Entry First</string>
    <string name="solid_line">Solid Line</string>
    <string name="dashed_line">Dashed Line</string>
    <string name="edit_drawing">Edit Drawing</string>
    <string name="user_name_cannot_be_empty">User name cannot be empty</string>
    <string name="password_too_short">Password too short ( 3> characters)</string>
    <string name="delete_file">Delete File</string>
    <string name="click_one_to_remove">Click one to remove</string>
    <string name="no_files_yet">No files yet</string>
    <string name="see_files">See files</string>
    <string name="hold_item_to_delete">Hold item to delete</string>
    <string name="title_activity_location_entry">Map</string>
    <string name="wait_for_finish_copy">Wait for copy to finish</string>
    <string name="your_location">Your location</string>
    <string name="new_entry_with_weather_and_text">New Entry with Weather and Text</string>
    <string name="new_entry_with_location_and_map">New Entry with Location and Map</string>
    <string name="copying">Copying</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_image">Add image before saving</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_confirmed">Passwords differ</string>
    <string name="user_duplicate">There is already user with this name</string>
    <string name="choose_image">Choose Image</string>
    <string name="description">Description :</string>
    <string name="highest_temperature">Highest Temperature :</string>
    <string name="lowest_temperature">Lowest Temperature :</string>
    <string name="wind_speed">Wind Speed :</string>
    <string name="temperature__">Temperature :</string>
    <string name="show_weather_status">Show weather status</string>
    <string name="turn_on_internet">Turn on internet connection</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
