<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawnEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/drawn_entry_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/drawn_entry_black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:checked="true"
                android:text="@string/black"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/drawn_entry_red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/red"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/drawn_entry_green"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/green"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/drawn_entry_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/blue"
                android:textSize="10sp" />

            <RadioButton
                android:id="@+id/drawn_entry_white"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/white"
                android:textSize="10sp" />
        </RadioGroup>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/nota_desenhada_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <Button
        android:id="@+id/drawn_entry_line_type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onLineTypeSwap"
        android:text="@string/solid_line" />
</LinearLayout>