<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DrawnEntrySetup">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/nota_desenahada_setup_entry_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/nota_desenhada_setup_color"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <SeekBar
        android:id="@+id/nota_desenahada_setup_seekBarR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:min="0"
        android:progress="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <SeekBar
        android:id="@+id/nota_desenahada_setup_seekBarG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <SeekBar
        android:id="@+id/nota_desenahada_setup_seekBarB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="1" />


    <Button
        android:id="@+id/nota_desenhada_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickCreateEntry"
        android:text="@string/create_drawing" />
</LinearLayout>